# BSRU

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: difficulty.rs  info.rs  lib.rs  loose_bool.rs  macros.rs  timing_traits.rs  utils.rs
src/difficulty/: gameplay_event.rs  lightshow.rs  playfield.rs
src/difficulty/lightshow/: basic.rs  boxes.rs  color.rs  easing.rs  filter.rs  group.rs  rotation.rs  translation.rs
src/difficulty/lightshow/boxes/: color.rs  rotation.rs  translation.rs
src/difficulty/lightshow/group/: color.rs  fx.rs  rotation.rs  translation.rs
src/info/: color_scheme.rs
src/info/color_scheme/: presets.rs
test_maps/: README.md
tests/: parse_map.rs
