[package]
name = "bsru"
version = "0.1.0"
edition = "2024"

[features]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_reflect = { version = "0.16.1", optional = true, default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-easing = "1.0.1"
