[package]
name = "bsru"
version = "0.3.0-beta.1"
edition = "2024"
description = "Beatsaber Rust Utilities: A Beatsaber V3 parsing library."
categories = ["game-development", "data-structures", "parser-implementations"]
keywords = ["beatsaber", "beatmap"]
repository = "https://github.com/AlephCubed/bsru"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]

[features]
bevy_color = ["dep:bevy_color"]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_color = { version = "0.16.2", optional = true, default-features = false, features = [
  "std",
] }
bevy_reflect = { version = "0.16.1", optional = true, default-features = false }
indexmap = "2.10.0"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-easing = "1.0.1"
